fix alignment of more button for responsive tabs
https://coveord.atlassian.net/browse/JSUI-1375

--- a/sass/_ResponsiveTabs.scss
+++ b/sass/_ResponsiveTabs.scss
@@ -2,10 +2,7 @@
 
   #coveo-tab-dropdown-header {
     margin-left: auto;
-    height: 40px;
-    * {
-      line-height: 40px;
-    }
+    line-height: 22px;
   }
 
   .CoveoTab {
